feat(block someone)

--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -169,7 +169,11 @@
     	left: 42px;
     	bottom: 0;
     }
-
+    
+    .blocked {
+        text-align: center;
+        color: #929292;
+    }
 }
 
 </style>
