--- a/HiPDA/View/post_view_dark.html
+++ b/HiPDA/View/post_view_dark.html
@@ -171,6 +171,11 @@
         left: 42px;
         bottom: 0;
     }
+    
+    .blocked {
+        text-align: center;
+        color: #3A3A3A;
+    }
 }
 
 </style>
