--- a/HiPDA/View/post_view_dark.html
+++ b/HiPDA/View/post_view_dark.html
@@ -97,6 +97,7 @@
         font-size: 0.9em;
     }
 
+    .content img[src^='http://www.hi-pda.com/forum/attachments/day_140621/1406211752793e731a4fec8f7b.png'],
     .content img[src^='images'],
     .content img[src^='http://www.hi-pda.com/forum/images'] {
         border: 0 !important;
