--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -94,9 +94,9 @@
     	font-size: 0.9em;
     }
     
-    .content img[src^='http://cnc.hi-pda.com/forum/attachments/day_140621/1406211752793e731a4fec8f7b.png'],
+    .content img[src^='http://www.hi-pda.com/forum/attachments/day_140621/1406211752793e731a4fec8f7b.png'],
     .content img[src^='images'],
-    .content img[src^='http://cnc.hi-pda.com/forum/images'] {
+    .content img[src^='http://www.hi-pda.com/forum/images'] {
     	border: 0 !important;
     	outline: 0 !important;
     	margin: 0 !important;
