--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -275,7 +275,7 @@ list.addEventListener("click", function(event) {
         if (el.getAttribute('data-id')) {
             location.href = el.getAttribute('data-id');
         } else {
-            img_click(el);
+            img_click_el(el);
         }
 
     } else if (el.nodeName == 'SPAN' && el.getAttribute('data-id')) {
@@ -291,12 +291,16 @@ list.addEventListener("click", function(event) {
     }
 });
 
-var img_click = function(el) {
+var img_click_el = function(el) {
     var p = getPosition(el);
     
     //location.href = 'image://'+el.src+'_'+p.x+'_'+p.y+'_';
     //location.href = 'image://'+el.src+'_{{'+p.x+', '+p.y+'}, {'+el.clientWidth+', '+el.clientHeight+'}}_';
     location.href = 'image://'+el.src+'___???a???a'+p.x+'???s'+p.y+'???b???s???a'+el.clientWidth+'???s'+el.clientHeight+'???b???b___';
+};
+
+var img_click = function (img) {
+    location.href = 'image://' + img;
 };
 
 //http://stackoverflow.com/questions/4712310/javascript-how-to-detect-if-a-word-is-highlighted
