强制span换行 (论坛附件链接a包含在span里, 且强制不换行) <span style="white-space: nowrap" id="attach_2084845" onmouseover="showMenu({'ctrlid':this.id,'pos':'12'})">

--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -62,6 +62,10 @@
     	border-bottom:1px dashed;
     }
     
+    span {
+        white-space: normal !Important;
+    }
+    
     img {
     	max-width: 100% !important;
     	width: 100% !important;
