--- a/HiPDA/View/post_view_dark.html
+++ b/HiPDA/View/post_view_dark.html
@@ -63,6 +63,10 @@
         border-bottom:1px dashed;
     }
     
+    span {
+        white-space: normal !Important;
+    }
+    
     img {
         
         /*-webkit-filter: grayscale(80%);*/
