--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -335,6 +335,9 @@ for (var i in images) {
     if (images[i].src.indexOf("http://www.hi-pda.com/forum/uc_server/data/avatar/") === 0) {
         continue;
     }
+    if (images[i].src.indexOf("http://www.hi-pda.com/forum/(null)") === 0) {
+        continue;
+    }
     images[i].onerror = function() {
         this.onerror = null;
         this.src = this.src;
