--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -208,9 +208,9 @@
 
 		<div class="content">
 
-			被人传染了？冤有头债有主，谁传染给你你去找谁。因为A的病会传染给你，所以B应该像牲口一样被拉去打疫苗，这还有天理吗？你自己不打疫苗，被传染了不是很正常？<br />
+			"战争尚未结束。"他擦过我身边低声说。<br />
 			<br />
-			就算人民因不接种疫苗而死，那也是自愿，无可厚非。人民的身体属于自己，而不是国家。人们愿意自杀，政府管得着吗？你怕死，可以花钱请别人自愿去打疫苗啊。你有什么权力强制别人去打疫苗？别人是你家养的牲口吗？<br />
+			"一曲忠诚的赞歌。"我低声回应。<br />
 
 		</div>
 		
