--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -75,6 +75,10 @@
     	display: block !important;
     }
     
+    .attach_image {
+        min-height: 20px;
+    }
+    
     .img_placeholder {
         width: 100%;
         height: 185px;
