干掉夜间模式模板, 与白天模板合并

--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -189,11 +189,40 @@
         text-align: center;
         color: #929292;
     }
+
+    /********** dark **********/
+    .dark {
+        color: #9c9c9c;
+        background-color:#0a0b0e;
+    }
+    .dark .author {
+        color: #5e5e5e;
+    }
+    .dark .img_placeholder {
+        background: #2b2b2b;
+        color: #9c9c9c;
+    }
+    .dark .gotoFloor {
+        background-color: DimGray;
+    }
+    .dark .floor {
+        color: #5e5e5e;
+    }
+    .dark .time-ago {
+        color: #5e5e5e;
+    }
+    .dark .author {
+        color: #5e5e5e;
+    }
+    .dark .blocked {
+        color: #3A3A3A;
+    }
+    /********** dark **********/
 }
 
 </style>
 </head>
-<body>
+<body class="**[style]**">
 <div class="bd">
 
 <ul class="list" id="list">
