--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -4,7 +4,8 @@
 	<title>HiPDA</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<style type="text/css">
+	**[debug_script]**
+    <style type="text/css">
 	body {
 		font-family: "STHeitiSC-Light","Helvetica Neue",sans-serif  !Important;
 		-webkit-text-size-adjust: **[txtadjust]**;
