--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -83,6 +83,10 @@
     .attach_image_free {
         min-height: 0px;
     }
+
+    .attach_small_image {
+        width: auto !important;
+    }
     
     .img_placeholder {
         width: 100%;
@@ -388,6 +392,9 @@ for (var i in images) {
     image.onload = function() {
         if (this.src && this.className.indexOf('attach_image') !== -1) {
             this.className += " attach_image_free";
+        }
+        if (this.naturalWidth < screen.width * 0.3) {
+            this.className += " attach_small_image";
         }
     }
 }
