--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -90,8 +90,8 @@
     
     .img_placeholder {
         width: 100%;
-        height: 185px;
-        line-height:185px;
+        height: **[min-height]**px;
+        line-height:**[min-height]**px;
         text-align:center;
         background: #f6f6f6;
         font-size: 0.8em;
