修复 iOS10 on iPad 无法调整字体的问题 https://forums.developer.apple.com/thread/51079

--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -9,7 +9,7 @@
 	body {
 		font-family: "STHeitiSC-Light","Helvetica Neue",sans-serif  !Important;
 		-webkit-text-size-adjust: **[txtadjust]**;
-		font-size: 16px !Important;
+		font-size: **[fontsize]**;
 		background-color:#f1f1ef;
 		width:95% !Important;
 		padding-top:15px !Important;
