响应系统设置中的粗体开关

--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -7,7 +7,7 @@
 	**[debug_script]**
     <style type="text/css">
 	body {
-		font-family: "STHeitiSC-Light","Helvetica Neue",sans-serif  !Important;
+		font-family: **[fontfamily]**,sans-serif  !Important;
 		-webkit-text-size-adjust: **[txtadjust]**;
 		font-size: **[fontsize]**;
 		background-color:#f1f1ef;
