oled屏 夜间模式纯黑

--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -224,6 +224,13 @@
     .dark .blocked {
         color: #3A3A3A;
     }
+    .dark img {
+        border: 0 !important;
+    }
+    
+    .oled {
+        background-color:#000000;
+    }
     /********** dark **********/
 }
 
