--- a/HiPDA/View/post_view.html
+++ b/HiPDA/View/post_view.html
@@ -358,8 +358,19 @@ function getPosition(element) {
     var yPosition = 0;
 
     while(element) {
-        xPosition += (element.offsetLeft - element.scrollLeft + element.clientLeft);
-        yPosition += (element.offsetTop - element.scrollTop + element.clientTop);
+        if (element == document.body) {
+            var scrollTop = Math.max(window.pageYOffset,
+                                     document.documentElement.scrollTop,
+                                     document.body.scrollTop);
+            var scrollLeft = Math.max(window.pageXOffset,
+                                      document.documentElement.scrollLeft,
+                                      document.body.scrollLeft);
+            xPosition += (element.offsetLeft - scrollLeft + element.clientLeft);
+            yPosition += (element.offsetTop - scrollTop + element.clientTop);
+        } else {
+            xPosition += (element.offsetLeft - element.scrollLeft + element.clientLeft);
+            yPosition += (element.offsetTop - element.scrollTop + element.clientTop);
+        }
         element = element.offsetParent;
     }
     return { x: xPosition, y: yPosition };
