--- a/HiPDA/View/post_view_wk.html
+++ b/HiPDA/View/post_view_wk.html
@@ -1,66 +1,65 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>HiPDA</title>
-	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	**[debug_script]**
+    <title>HiPDA</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    **[debug_script]**
     <style type="text/css">
-	body {
-		font-family: **[fontfamily]**,sans-serif  !Important;
-		-webkit-text-size-adjust: **[txtadjust]**;
-		font-size: **[fontsize]**;
-		background-color:#f1f1ef;
-		width:95% !Important;
-		padding-top:15px !Important;
-		padding-bottom:20px !Important;
-		margin: 0 auto !Important;
-		word-wrap: break-word !Important;
-		line-height:**[lineHeight]** !Important;
-		overflow: hidden;
-	}
-
-	textarea {
-		display: none !important;
-	}
-	input {
-		display: none !important;
-	} 
-	form {
-		display: none !important;
-	}
-
-	table,thead,tbody
-	{
-		table-layout: fixed;
-		max-width:100% !important;
-	}
-
-	table, tr, td {
-		background-color: transparent !important;
-	}
-
-	table {
-    	width: 100% !important;
-    	max-width 100% !important;
+    body {
+        font-family: **[fontfamily]**,sans-serif  !Important;
+        -webkit-text-size-adjust: **[txtadjust]**;
+        font-size: **[fontsize]**;
+        background-color:#f1f1ef;
+        width:95% !Important;
+        padding-top:15px !Important;
+        padding-bottom:20px !Important;
+        margin: 0 auto !Important;
+        word-wrap: break-word !Important;
+        line-height:**[lineHeight]** !Important;
     }
 
-	h1,h2,h3 {
-    	font-size:1.0em !important;
+    textarea {
+        display: none !important;
+    }
+    input {
+        display: none !important;
+    }
+    form {
+        display: none !important;
     }
 
-	.title {
-		font-size: 20px !Important;
-		margin-bottom: 10px;
-	}
-	.title a {
-		text-decoration: none !Important;
-		color:#333 !Important;
-	}
+    table,thead,tbody
+    {
+        table-layout: fixed;
+        max-width:100% !important;
+    }
+
+    table, tr, td {
+        background-color: transparent !important;
+    }
+
+    table {
+        width: 100% !important;
+        max-width 100% !important;
+    }
+
+    h1,h2,h3 {
+        font-size:1.0em !important;
+    }
+
+    .title {
+        font-size: 20px !Important;
+        margin-bottom: 10px;
+    }
+    .title a {
+        text-decoration: none !Important;
+        color:#333 !Important;
+    }
 
     .content a {
-    	text-decoration: none !Important;
-    	border-bottom:1px dashed;
+        text-decoration: none !Important;
+        border-bottom:1px dashed;
     }
     
     span {
@@ -68,12 +67,12 @@
     }
     
     img {
-    	max-width: 100% !important;
-    	width: 100% !important;
-    	height: auto !important;
-    	margin: 0 auto !important;
-    	border: 1px solid #DDD;
-    	display: block !important;
+        max-width: 100% !important;
+        width: 100% !important;
+        height: auto !important;
+        margin: 0 auto !important;
+        border: 1px solid #DDD;
+        display: block !important;
     }
 
     .attach_image {
@@ -102,13 +101,13 @@
     .content video,
     .content embed,
     .content object {
-    	display: none;
+        display: none;
     }
     
     .content pre,
     .content code {
-    	white-space: pre-line;
-    	font-size: 0.9em;
+        white-space: pre-line;
+        font-size: 0.9em;
     }
     
     .content img[src^='images'],
@@ -118,78 +117,78 @@
     .content img[src*='hi-pda.com/forum/attachments/day_140621/1406211752793e731a4fec8f7b.png'],
     .content img[src*='hi-pda.com/forum/attachments/day_140621/1406211752793e731a4fec8f7b.png'],
     .content img[src*='hi-pda.com/forum/attachments/day_140621/1406211752793e731a4fec8f7b.png'] {
-    	border: 0 !important;
-    	outline: 0 !important;
-    	margin: 0 !important;
-    	width: auto !important;
-    	background-color: transparent !important;
-    	display: inline !important;
+        border: 0 !important;
+        outline: 0 !important;
+        margin: 0 !important;
+        width: auto !important;
+        background-color: transparent !important;
+        display: inline !important;
     }
 
 
     .list {
-    	list-style: none outside none;
-    	margin: 0;
-    	padding: 0;
+        list-style: none outside none;
+        margin: 0;
+        padding: 0;
     }
 
     .bd li {
-    	border-bottom: 1px solid rgba(0, 0, 0, 0.07);
-    	padding: 4px 0px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.07);
+        padding: 4px 0px;
     }
     
     .bd .gotoFloor {
 
-    	background-color: Gainsboro;
+        background-color: Gainsboro;
 
     }
 
     .list {
-    	list-style: none outside none;
+        list-style: none outside none;
     }
 
     .info {
-    	/*background-color: red;*/
-    	position: relative;
-    	height: 42px;
+        /*background-color: red;*/
+        position: relative;
+        height: 42px;
     }
 
     .avatar {
-    	position: absolute;
-    	top: 0;
-    	left: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
 
     .avatar img {
-    	width: 35px !important;
-    	height: 35px !important;
-    	-webkit-border-radius: 3.5px;
+        width: 35px !important;
+        height: 35px !important;
+        -webkit-border-radius: 3.5px;
 
-    	border: 0 !important;
-    	outline: 0 !important;
-    	margin: 0 !important;
+        border: 0 !important;
+        outline: 0 !important;
+        margin: 0 !important;
     }
 
     .floor {
-    	position: absolute;
-    	right: 0;
-    	bottom: 20px;
+        position: absolute;
+        right: 0;
+        bottom: 20px;
     }
 
     .time-ago {
         font-size: 14px;
-    	position: absolute;
-    	right: 0;
-    	bottom: 0;
-    	color: #FF6600;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        color: #FF6600;
     }
 
     .author {
         font-size: 14px;
         color: #7f7f7f;
-    	position: absolute;
-    	left: 42px;
-    	bottom: 0;
+        position: absolute;
+        left: 42px;
+        bottom: 0;
     }
     
     .blocked {
@@ -224,6 +223,13 @@
     .dark .blocked {
         color: #3A3A3A;
     }
+    .dark img {
+        border: 0 !important;
+    }
+    
+    .oled {
+        background-color:#000000;
+    }
     /********** dark **********/
 }
 
@@ -233,61 +239,36 @@
 <div class="bd">
 
 <ul class="list" id="list">
-	<li>
-		<div class="title">
+    <li>
+        <div class="title">
             ##title##
         </div>
-	</li>
+    </li>
     <span style="display:none">##lists##</span>
-    <!-- 
-	<li class="" data-id="7308071" onclick="location.href='http://example';">
-		<div class="info">
+    <!--
+    <li class="" data-id="7308071" onclick="location.href='http://example';">
+        <div class="info">
 
-			<span class="avatar"><a href="large_image"><img src="http://www.hi-pda.com/forum/uc_server/data/avatar/000/45/17/59_avatar_middle.jpg"></a></span>
-			<span class="author">hswglff</span>
-			<span class="floor">1#</span>
-			<span class="time-ago">4 hours ago</span>
+            <span class="avatar"><a href="large_image"><img src="http://www.hi-pda.com/forum/uc_server/data/avatar/000/45/17/59_avatar_middle.jpg"></a></span>
+            <span class="author">hswglff</span>
+            <span class="floor">1#</span>
+            <span class="time-ago">4 hours ago</span>
 
-		</div>
+        </div>
 
-		<div class="content">
+        <div class="content">
 
-			"战争尚未结束。"他擦过我身边低声说。<br />
-			<br />
-			"一曲忠诚的赞歌。"我低声回应。<br />
+            "战争尚未结束。"他擦过我身边低声说。<br />
+            <br />
+            "一曲忠诚的赞歌。"我低声回应。<br />
 
-		</div>
-		
-	</li> -->
+        </div>
+        
+    </li> -->
 </ul>
 </div>
 <script type="text/javascript">
 
-/*
- FastClick  1.0.0
-*/
-function FastClick(a){function b(a,b){return function(){return a.apply(b,arguments)}}var c;this.trackingClick=!1;this.trackingClickStart=0;this.targetElement=null;this.lastTouchIdentifier=this.touchStartY=this.touchStartX=0;this.touchBoundary=10;this.layer=a;FastClick.notNeeded(a)||(deviceIsAndroid&&(a.addEventListener("mouseover",b(this.onMouse,this),!0),a.addEventListener("mousedown",b(this.onMouse,this),!0),a.addEventListener("mouseup",b(this.onMouse,this),!0)),a.addEventListener("click",b(this.onClick,
-this),!0),a.addEventListener("touchstart",b(this.onTouchStart,this),!1),a.addEventListener("touchmove",b(this.onTouchMove,this),!1),a.addEventListener("touchend",b(this.onTouchEnd,this),!1),a.addEventListener("touchcancel",b(this.onTouchCancel,this),!1),Event.prototype.stopImmediatePropagation||(a.removeEventListener=function(b,c,e){var f=Node.prototype.removeEventListener;"click"===b?f.call(a,b,c.hijacked||c,e):f.call(a,b,c,e)},a.addEventListener=function(b,c,e){var f=Node.prototype.addEventListener;
-"click"===b?f.call(a,b,c.hijacked||(c.hijacked=function(a){a.propagationStopped||c(a)}),e):f.call(a,b,c,e)}),"function"===typeof a.onclick&&(c=a.onclick,a.addEventListener("click",function(a){c(a)},!1),a.onclick=null))}var deviceIsAndroid=0<navigator.userAgent.indexOf("Android"),deviceIsIOS=/iP(ad|hone|od)/.test(navigator.userAgent),deviceIsIOS4=deviceIsIOS&&/OS 4_\d(_\d)?/.test(navigator.userAgent),deviceIsIOSWithBadTarget=deviceIsIOS&&/OS ([6-9]|\d{2})_\d/.test(navigator.userAgent);
-FastClick.prototype.needsClick=function(a){switch(a.nodeName.toLowerCase()){case "button":case "select":case "textarea":if(a.disabled)return!0;break;case "input":if(deviceIsIOS&&"file"===a.type||a.disabled)return!0;break;case "label":case "video":return!0}return/\bneedsclick\b/.test(a.className)};
-FastClick.prototype.needsFocus=function(a){switch(a.nodeName.toLowerCase()){case "textarea":return!0;case "select":return!deviceIsAndroid;case "input":switch(a.type){case "button":case "checkbox":case "file":case "image":case "radio":case "submit":return!1}return!a.disabled&&!a.readOnly;default:return/\bneedsfocus\b/.test(a.className)}};
-FastClick.prototype.sendClick=function(a,b){var c,d;document.activeElement&&document.activeElement!==a&&document.activeElement.blur();d=b.changedTouches[0];c=document.createEvent("MouseEvents");c.initMouseEvent(this.determineEventType(a),!0,!0,window,1,d.screenX,d.screenY,d.clientX,d.clientY,!1,!1,!1,!1,0,null);c.forwardedTouchEvent=!0;a.dispatchEvent(c)};FastClick.prototype.determineEventType=function(a){return deviceIsAndroid&&"select"===a.tagName.toLowerCase()?"mousedown":"click"};
-FastClick.prototype.focus=function(a){var b;deviceIsIOS&&a.setSelectionRange&&0!==a.type.indexOf("date")&&"time"!==a.type?(b=a.value.length,a.setSelectionRange(b,b)):a.focus()};FastClick.prototype.updateScrollParent=function(a){var b,c;b=a.fastClickScrollParent;if(!b||!b.contains(a)){c=a;do{if(c.scrollHeight>c.offsetHeight){b=c;a.fastClickScrollParent=c;break}c=c.parentElement}while(c)}b&&(b.fastClickLastScrollTop=b.scrollTop)};
-FastClick.prototype.getTargetElementFromEventTarget=function(a){return a.nodeType===Node.TEXT_NODE?a.parentNode:a};
-FastClick.prototype.onTouchStart=function(a){var b,c,d;if(1<a.targetTouches.length)return!0;b=this.getTargetElementFromEventTarget(a.target);c=a.targetTouches[0];if(deviceIsIOS){d=window.getSelection();if(d.rangeCount&&!d.isCollapsed)return!0;if(!deviceIsIOS4){if(c.identifier===this.lastTouchIdentifier)return a.preventDefault(),!1;this.lastTouchIdentifier=c.identifier;this.updateScrollParent(b)}}this.trackingClick=!0;this.trackingClickStart=a.timeStamp;this.targetElement=b;this.touchStartX=c.pageX;
-this.touchStartY=c.pageY;200>a.timeStamp-this.lastClickTime&&a.preventDefault();return!0};FastClick.prototype.touchHasMoved=function(a){a=a.changedTouches[0];var b=this.touchBoundary;return Math.abs(a.pageX-this.touchStartX)>b||Math.abs(a.pageY-this.touchStartY)>b?!0:!1};FastClick.prototype.onTouchMove=function(a){if(!this.trackingClick)return!0;if(this.targetElement!==this.getTargetElementFromEventTarget(a.target)||this.touchHasMoved(a))this.trackingClick=!1,this.targetElement=null;return!0};
-FastClick.prototype.findControl=function(a){return void 0!==a.control?a.control:a.htmlFor?document.getElementById(a.htmlFor):a.querySelector("button, input:not([type=hidden]), keygen, meter, output, progress, select, textarea")};
-FastClick.prototype.onTouchEnd=function(a){var b,c,d=this.targetElement;if(!this.trackingClick)return!0;if(200>a.timeStamp-this.lastClickTime)return this.cancelNextClick=!0;this.cancelNextClick=!1;this.lastClickTime=a.timeStamp;b=this.trackingClickStart;this.trackingClick=!1;this.trackingClickStart=0;deviceIsIOSWithBadTarget&&(c=a.changedTouches[0],d=document.elementFromPoint(c.pageX-window.pageXOffset,c.pageY-window.pageYOffset)||d,d.fastClickScrollParent=this.targetElement.fastClickScrollParent);
-c=d.tagName.toLowerCase();if("label"===c){if(b=this.findControl(d)){this.focus(d);if(deviceIsAndroid)return!1;d=b}}else if(this.needsFocus(d)){if(100<a.timeStamp-b||deviceIsIOS&&window.top!==window&&"input"===c)return this.targetElement=null,!1;this.focus(d);this.sendClick(d,a);deviceIsIOS4&&"select"===c||(this.targetElement=null,a.preventDefault());return!1}if(deviceIsIOS&&!deviceIsIOS4&&(b=d.fastClickScrollParent)&&b.fastClickLastScrollTop!==b.scrollTop)return!0;this.needsClick(d)||(a.preventDefault(),
-this.sendClick(d,a));return!1};FastClick.prototype.onTouchCancel=function(){this.trackingClick=!1;this.targetElement=null};FastClick.prototype.onMouse=function(a){return this.targetElement&&!a.forwardedTouchEvent&&a.cancelable?!this.needsClick(this.targetElement)||this.cancelNextClick?(a.stopImmediatePropagation?a.stopImmediatePropagation():a.propagationStopped=!0,a.stopPropagation(),a.preventDefault(),!1):!0:!0};
-FastClick.prototype.onClick=function(a){if(this.trackingClick)return this.targetElement=null,this.trackingClick=!1,!0;if("submit"===a.target.type&&0===a.detail)return!0;a=this.onMouse(a);a||(this.targetElement=null);return a};
-FastClick.prototype.destroy=function(){var a=this.layer;deviceIsAndroid&&(a.removeEventListener("mouseover",this.onMouse,!0),a.removeEventListener("mousedown",this.onMouse,!0),a.removeEventListener("mouseup",this.onMouse,!0));a.removeEventListener("click",this.onClick,!0);a.removeEventListener("touchstart",this.onTouchStart,!1);a.removeEventListener("touchmove",this.onTouchMove,!1);a.removeEventListener("touchend",this.onTouchEnd,!1);a.removeEventListener("touchcancel",this.onTouchCancel,!1)};
-FastClick.notNeeded=function(a){var b,c;if("undefined"===typeof window.ontouchstart)return!0;if(c=+(/Chrome\/([0-9]+)/.exec(navigator.userAgent)||[,0])[1])if(deviceIsAndroid){if((b=document.querySelector("meta[name=viewport]"))&&(-1!==b.content.indexOf("user-scalable=no")||31<c&&window.innerWidth<=window.screen.width))return!0}else return!0;return"none"===a.style.msTouchAction?!0:!1};FastClick.attach=function(a){return new FastClick(a)};
-"undefined"!==typeof define&&define.amd?define(function(){return FastClick}):"undefined"!==typeof module&&module.exports?(module.exports=FastClick.attach,module.exports.FastClick=FastClick):window.FastClick=FastClick;
-
-window.addEventListener('load', function() {
-    FastClick.attach(document.body);
-}, false);
 
 function call_native(method, object) {
     window.webkit.messageHandlers.observe.postMessage({method:method, object:object});
@@ -353,7 +334,7 @@ list.addEventListener("click", function(event) {
 
 var img_click_el = function(el) {
     var p = getPosition(el);
-   
+    
     call_native('image', {
         'src': el.src,
         'x': p.x,
@@ -393,11 +374,31 @@ function getPosition(element) {
     var yPosition = 0;
 
     while(element) {
-        xPosition += (element.offsetLeft - element.scrollLeft + element.clientLeft);
-        yPosition += (element.offsetTop - element.scrollTop + element.clientTop);
+        if (element == document.body) {
+            var scrollTop = Math.max(window.pageYOffset,
+                                     document.documentElement.scrollTop,
+                                     document.body.scrollTop);
+            var scrollLeft = Math.max(window.pageXOffset,
+                                      document.documentElement.scrollLeft,
+                                      document.body.scrollLeft);
+            xPosition += (element.offsetLeft - scrollLeft + element.clientLeft);
+            yPosition += (element.offsetTop - scrollTop + element.clientTop);
+        } else {
+            xPosition += (element.offsetLeft - element.scrollLeft + element.clientLeft);
+            yPosition += (element.offsetTop - element.scrollTop + element.clientTop);
+        }
         element = element.offsetParent;
     }
     return { x: xPosition, y: yPosition };
+}
+
+//https://stackoverflow.com/questions/442404/retrieve-the-position-x-y-of-an-html-element
+function getPosition2(el) {
+  el = el.getBoundingClientRect();
+  return {
+    x: el.left + window.scrollX,
+    y: el.top + window.scrollY
+  }
 }
 
 var images = document.getElementsByTagName('IMG');
@@ -421,6 +422,39 @@ function warpImageNode(image) {
         if (this.naturalWidth < screen.width * 0.3) {
             this.className += " attach_small_image";
         }
+    }
+}
+
+var savedBackgroudColor = null;
+function clearBackgroudColor() {
+    savedBackgroudColor = window.getComputedStyle(document.body).backgroundColor;
+    document.body.style.backgroundColor = "#FFFFFF";
+}
+
+function restoreBackgroudColor() {
+    if (savedBackgroudColor) {
+        document.body.style.backgroundColor = savedBackgroudColor;
+    }
+}
+
+function jumpToFloor(floor, isIOS11) {
+    jumpToAnchor('floor_'+floor, isIOS11);
+}
+
+function jumpToAnchor(anchor, isIOS11) {
+    if (!isIOS11) {
+        location.href='#'+anchor;
+        return;
+    }
+
+    var aa = document.getElementsByTagName('a');
+    for (var i = 0; i < aa.length; i++) {
+        var a = aa[i];
+        if (a.getAttribute('name') === anchor) {
+           var p = getPosition2(a);
+           window.scrollTo(0, p.y);
+           break;
+       }
     }
 }
 
